--- a/Earthquakes.Web/content/Site.css
+++ b/Earthquakes.Web/content/Site.css
@@ -15,3 +15,9 @@ select,
 textarea {
     max-width: 280px;
 }
+
+#map-canvas {
+    width: 500px;
+    height: 400px;
+    background-color: #CCC;
+}
